# tranespotting

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: python-app.yml
docs/hardware/: README.md  build_guide.md  enviracom_interface.md
docs/protocol/: README.md  enviracom_physical.md
tests/: __init__.py  test_packet.py
tools/: __init__.py  analyze.py  baudrate_detect.py  capture.py  packet.py  replay.py  signal_analyze.py
tools/hardware/: __init__.py  enviracom_interface.py  enviracom_pcb.py  enviracom_schematic.py
